--- a/README
+++ b/README
@@ -1,22 +1,51 @@
-1. First copy the files "alarm_cond.c", and "errors.h" into your
-   own directory.
+# README for New Alarm Cond Program
 
-2. To compile the program "alarm_cond.c", use the following command:
+Welcome to the # New Alarm Cond Program! This guide provides step-by-step instructions to ensure proper setup and execution of the program on your system.
 
-      cc alarm_cond.c -D_POSIX_PTHREAD_SEMANTICS -lpthread
+## Prerequisites
 
-3. Type "a.out" to run the executable code.
+Before you begin, it is essential to have the correct permissions to execute the Makefile, which is vital for compiling and running the program.
 
-4. At the prompt "ALARM>", type in the number of seconds at which
-   the alarm should expire, followed by the text of the message.
-   For example:
+## Installation and Setup
 
-   ALARM> 2 Good Morning!
+1.  **Navigating to the Program Directory**
 
-  (To exit from the program, type Ctrl-d.)
+Before setting execution permissions, navigate to the directory containing `new_alarm_cond.c` and the `Makefile`.
 
-5.. Read pages 82-88 of the book "Programming with POSIX Threads"
-   by David R. Butenhof for a detailed explanation of how the
-   program "alarm_cond.c" works.
-   (The book "Programming with POSIX Threads" has been put on
-   reserve in Steacie Library.)
+2.  **Setting Execution Permissions for the Makefile**
+
+To allow the Makefile to be executed, run the following command in your terminal:
+
+```
+
+chmod +x Makefile
+
+```
+
+This command modifies the Makefile's permissions, enabling its execution.
+
+## Running the Program
+
+1.  **Compiling the Program**
+
+With execution permissions set, you can now compile `new_alarm_cond.c`. Execute the following command:
+
+```
+
+make
+
+```
+
+This will compile and execute the program.
+
+2.  **Exiting the Program**
+
+To safely exit the program, use the keyboard shortcut:
+
+```
+
+Ctrl + D
+
+```
+
+This command will terminate the program and return you to the terminal.
